--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^6.2.8",
     "mongoose-sequence": "^5.3.1",
     "node-fetch": "^2.6.7",
-    "parameter": "^3.7.0"
+    "parameter": "^3.7.0",
+    "redis": "^4.6.14"
   }
 }
